--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "echarts": "^5.3.1",
+    "ng-mocks": "^13.2.0",
     "ngx-echarts": "^8.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
@@ -29,8 +30,10 @@
     "@angular/cli": "~13.3.0",
     "@angular/compiler-cli": "~13.3.0",
     "@types/jasmine": "~3.10.0",
+    "@types/jest": "^27.4.1",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
+    "jest": "^27.5.1",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.1.0",
